### Fix a bug with the integration of time in pymarsseason Change configuratio file for sphinx (HEAD -> main)
>Tue, 28 Feb 2023 02:44:56 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Added updating of PDS3 objects Added the creation of STAC based on JSON response without PDS3 objects Added documentation
>Tue, 28 Feb 2023 02:04:44 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Refactoring Improve documentation (origin/main)
>Sun, 26 Feb 2023 05:04:49 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Refactoring Add tests
>Wed, 22 Feb 2023 18:31:39 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add new storage strategy to handle a large number of items in one collection
>Mon, 20 Feb 2023 13:44:31 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix bug
>Sat, 18 Feb 2023 14:45:44 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix types
>Sat, 18 Feb 2023 06:17:59 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix small bugs
>Sat, 18 Feb 2023 06:17:27 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add strategy to custom directories name during STAC creation
>Sat, 18 Feb 2023 06:16:18 +0100
