@@ -8,12 +8,13 @@ jobs:
     steps:
     - name: Checkout the package
       uses: actions/checkout@v2
-
-    - name: Install dependencies
+    - name: Install software
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
+        make
+    - name: Install dependencies for development/documentation
+      run: |
+        pip install -r requirements_dev.txt
     - name: Generate static files
       run: |
         make doc
