@@ -1,4 +1,14 @@
-### Fix a bug with the integration of time in pymarsseason Change configuratio file for sphinx (HEAD -> main)
+### Add deploy for gitlab-ci (HEAD -> main)
+>Tue, 28 Feb 2023 12:25:42 +0100
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix a bug with the integration of time in pymarsseason Change configuratio file for sphinx (origin/main)
 >Tue, 28 Feb 2023 02:44:56 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
@@ -18,7 +28,7 @@
 
 
 
-### Refactoring Improve documentation (origin/main)
+### Refactoring Improve documentation
 >Sun, 26 Feb 2023 05:04:49 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
